[package]
authors = ["pgold"]
edition = "2018"
readme = "README.md"
name = "blinky"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
embedded-hal = "0.2.4"
panic-halt = "0.2.0"

[dependencies.stm32f4xx-hal]
features = ["stm32f411", "rt"]
version = "0.8.3"

[[bin]]
name = "blinky"
test = false
bench = false

[profile.release]
# Setting codegen-units to 1 may yield faster code (and slower compile time).
codegen-units = 1
# Use Link Time Optimization.
lto = true
